[package]
name = "awer"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-only"
authors = ["Alexandre Courbot <gnurou@gmail.com>"]

[features]
default = ["sdl2-sys"]
sdl2-sys = ["sdl2", "gl", "imgui", "imgui-sdl2", "imgui-opengl-renderer"]

[dependencies]
log = "0.4"
env_logger = "0.8"
byteorder = "1"
clap = "2"
anyhow = "1.0"

# SDL2 dependencies
sdl2 = { version = "0.34", optional = true, features = ["unsafe_textures"] }
gl = { version = "0.14", optional = true }
imgui = { version = "0.7", optional = true }
imgui-sdl2 = { version = "0.14", optional = true }
imgui-opengl-renderer = { version = "0.11", optional = true }
